# ex_Cardiff

cucr_robots_tests/: .project  README.md
cucr_robots_tests/tests_a1/test_a1_common_bringup/: package.xml
cucr_robots_tests/tests_a1/test_a1_common_bringup/env-hooks/: 99.test_a1_common_functions.bash
cucr_robots_tests/tests_a1/test_a1_desktop_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_a1/test_a1_desktop_bringup/env-hooks/: 99.test_a1_desktop_functions.bash
cucr_robots_tests/tests_a1/test_a1_desktop_bringup/launch/: base_teleop.launch  rviz.launch
cucr_robots_tests/tests_a1/test_a1_hardware_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_a1/test_a1_hardware_bringup/env-hooks/: 99.test_a1_hardware_functions.bash
cucr_robots_tests/tests_a1/test_a1_hardware_bringup/launch/: full.launch
cucr_robots_tests/tests_a1/test_a1_simulation_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_a1/test_a1_simulation_bringup/config/: localization_config.lua  localization_config_odometry.lua  mapping_config.lua  mapping_config_odometry.lua
cucr_robots_tests/tests_a1/test_a1_simulation_bringup/env-hooks/: 99.test_a1_simulation_functions.bash
cucr_robots_tests/tests_a1/test_a1_simulation_bringup/launch/: full.launch
cucr_robots_tests/tests_a1/test_a1_simulation_bringup/maps/: map.pgm  map.yaml
cucr_robots_tests/tests_franka/test_franka_hardware_bringup/: CMakeLists.txt  README.md  package.xml
cucr_robots_tests/tests_franka/test_franka_hardware_bringup/env-hooks/: 99.test_franka_hardware_functions.bash
cucr_robots_tests/tests_franka/test_franka_hardware_bringup/launch/: full.launch
cucr_robots_tests/tests_franka/test_franka_hardware_bringup/scripts/: franka_real_demo.cpp
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_common_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_common_bringup/env-hooks/: 99.test_open_manipulator_common_functions.bash
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_common_bringup/src/: moveit_demo.cpp
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_desktop_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_desktop_bringup/env-hooks/: 99.test_open_manipulator_desktop_functions.bash
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_desktop_bringup/launch/: rviz.launch
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_hardware_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_hardware_bringup/env-hooks/: 99.test_open_manipulator_hardware_functions.bash
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_hardware_bringup/launch/: full.launch
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_hardware_bringup/scripts/: add_scene_object.py
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_simulation_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_simulation_bringup/env-hooks/: 99.test_open_manipulator_simulation_functions.bash
cucr_robots_tests/tests_open_manipulator/test_open_manipulator_simulation_bringup/launch/: full.launch
cucr_robots_tests/tests_pepper/test_pepper_common_bringup/: package.xml
cucr_robots_tests/tests_pepper/test_pepper_hardware_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_pepper/test_pepper_hardware_bringup/config/: controllers.yaml
cucr_robots_tests/tests_pepper/test_pepper_hardware_bringup/env-hooks/: 99.test_pepper_hardware_functions.bash
cucr_robots_tests/tests_pepper/test_pepper_hardware_bringup/launch/: JulietteY20MP_moveit_controller_manager.launch.xml  full.launch  move_group.launch  moveit_planner.launch  moveit_rviz.launch  pepper_bringup.launch  pepper_control_trajectory.launch  pepper_upload.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
cucr_robots_tests/tests_pepper/test_pepper_hardware_bringup/scripts/: base_footprint_tf.py  odom_tf.py
cucr_robots_tests/tests_stretch2/test_stretch2_common_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_stretch2/test_stretch2_common_bringup/env-hooks/: 99.test_stretch2_common_functions.bash
cucr_robots_tests/tests_stretch2/test_stretch2_common_bringup/launch/: base_teleop.launch
cucr_robots_tests/tests_stretch2/test_stretch2_hardware_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_stretch2/test_stretch2_hardware_bringup/env-hooks/: 99.test_stretch2_hardware_functions.bash
cucr_robots_tests/tests_stretch2/test_stretch2_hardware_bringup/launch/: full.launch
cucr_robots_tests/tests_stretch2/test_stretch2_hardware_bringup/rviz/: demo.rviz
cucr_robots_tests/tests_stretch2/test_stretch2_simulation_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_stretch2/test_stretch2_simulation_bringup/env-hooks/: 99.test_stretch2_simulation_functions.bash
cucr_robots_tests/tests_stretch2/test_stretch2_simulation_bringup/launch/: full.launch
cucr_robots_tests/tests_stretch2/test_stretch2_simulation_bringup/rviz/: localization.rviz  mapping.rviz  moveit.rviz  navigation.rviz
cucr_robots_tests/tests_stretch2/test_stretch2_simulation_bringup/scripts/: publish_ground_truth_odom.py
cucr_robots_tests/tests_tiago/test_tiago_common_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_tiago/test_tiago_desktop_bringup/: CMakeLists.txt  package.xml
cucr_robots_tests/tests_tiago/test_tiago_simulation_bringup/: CMakeLists.txt  package.xml
tests-franka-gmp/test_franka_gmp_common_bringup/: CMakeLists.txt  agr_output_single.txt  model.pt  package.xml
tests-franka-gmp/test_franka_gmp_common_bringup/env-hooks/: 99.test_franka_gmp_common_functions.bash
tests-franka-gmp/test_franka_gmp_common_bringup/src/: attempt_poses.sh  capture_scene.py  gazebo_cleaner.py  gazebo_listener.py  gazebo_spawner.py  generate_poses.sh  generate_training_data.sh  move_to_capture.py  move_to_poses.py  visualize_rgb.py
(+78 files in other folders)
