<?xml version="1.0"?>
<package format="3">
  <name>test_a1_common_bringup</name>
  <version>0.0.0</version>
  <description>The test_a1_common_bringup package</description>


  <maintainer email="silvas1@cardiff.ac.uk">Steven Silva Mendoza</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- cartographer -->
  <buildtool_depend>ninja-build</buildtool_depend>

  <!-- unitree a1 -->
  <depend>unitree_legged_msgs</depend>
  <depend>unitree_controller</depend>
  <depend>a1_description</depend>

  <!-- cartographer ros -->
  <depend>cartographer</depend>
  <depend>cartographer_ros</depend>
  <depend>cartographer_ros_msgs</depend>
  <depend>cartographer_rviz</depend>

  <export>

  </export>
</package>