<?xml version="1.0"?>
<package format="3">
  <name>test_a1_simulation_bringup</name>
  <version>0.0.0</version>
  <description>The test_a1_simulation_bringup package</description>


  <maintainer email="silvas1@cardiff.ac.uk">Steven Silva Mendoza</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <depend>test_a1_common_bringup</depend>
  <depend>test_a1_desktop_bringup</depend>

  <depend>unitree_gazebo</depend>
  <depend>unitree_legged_control</depend>
  <depend>champ_gazebo</depend>
  <depend>a1_hl_control_config</depend>
  <depend>a1_pose</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>