<?xml version="1.0"?>
<package format="2">
  <name>test_franka_hardware_bringup</name>
  <version>0.0.0</version>
  <description>The test_franka_hardware_bringup package</description>

  <maintainer email="ddumanfurkan@gmail.com">frkndmn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <depend>roscpp</depend>

  <!-- common and desktop pepper deps -->
  <depend>test_franka_common_bringup</depend>
  <depend>test_franka_desktop_bringup</depend>

  <export>

  </export>
</package>
