<?xml version="1.0"?>
<package format="2">
  <name>test_open_manipulator_desktop_bringup</name>
  <version>0.0.0</version>
  <description>The test_open_manipulator_desktop_bringup package</description>

  <maintainer email="silvas1@cardiff.ac.uk">Steven Silva Mendoza</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>