<?xml version="1.0"?>
<package format="2">
  <name>test_open_manipulator_hardware_bringup</name>
  <version>0.0.0</version>
  <description>The test_open_manipulator_hardware_bringup package</description>

  <maintainer email="silvas1@cardiff.ac.uk">Steven Silva Mendoza</maintainer>

  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>test_open_manipulator_common_bringup</depend>
  <depend>test_open_manipulator_desktop_bringup</depend>  

  <depend>open_manipulator_controller</depend>
  <depend>open_manipulator_libs</depend>
  <depend>dynamixel_workbench</depend>
  <depend>dynamixel_workbench_controllers</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_operators</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>dynamixel_sdk</depend>
  <depend>open_manipulator_msgs</depend>  

  <export>

  </export>
</package>
