<?xml version="1.0"?>
<package format="3">
  <name>test_open_manipulator_simulation_bringup</name>
  <version>0.0.0</version>
  <description>The test_open_manipulator_simulation_bringup package</description>


  <maintainer email="silvas1@cardiff.ac.uk">Steven Silva Mendoza</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <depend>test_open_manipulator_common_bringup</depend>
  <depend>test_open_manipulator_desktop_bringup</depend>

  <depend>roboticsgroup_gazebo_plugins</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
