<?xml version="1.0"?>
<package format="2">
  <name>test_pepper_hardware_bringup</name>
  <version>0.0.0</version>
  <description>The test_pepper_hardware_bringup package</description>

  <maintainer email="silvas1@cardiff.ac.uk">Steven Silva Mendoza</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <depend>naoqi_dcm_driver</depend>
  <depend>pepper_dcm_bringup</depend>

  <!-- common and desktop pepper deps -->
  <depend>test_pepper_common_bringup</depend>
  <depend>test_pepper_desktop_bringup</depend>

  <export>

  </export>
</package>
