<?xml version="1.0"?>
<package format="2">
  <name>test_stretch2_common_bringup</name>
  <version>0.0.0</version>
  <description>The test_stretch2_common_bringup package</description>

  <maintainer email="millan-normans@cardiff.ac.uk">smn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <!-- Moveit  -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>move_base</depend>
  <!-- Mapping -->
  <depend>gmapping</depend>
  <!-- Localization -->
  <depend>amcl</depend>
  <!-- Navigation -->
  <depend>dwa_local_planner</depend>

  <!-- Stretch2 robot -->
  <depend>stretch_core</depend>
  <depend>stretch_description</depend>
  <depend>stretch_navigation</depend>
  <depend>stretch_moveit_config</depend>

  <!-- Camera intel realsense -->
  <depend>realsense2_camera</depend>
  <depend>realsense2_description</depend>
  <depend>realsense_gazebo_plugin</depend>

  <!-- Others-->
  <depend>tf_conversions</depend>
  <depend>tf2_sensor_msgs</depend>

</package>
