<?xml version="1.0"?>
<package format="2">
  <name>test_stretch2_simulation_bringup</name>
  <version>0.0.0</version>
  <description>The test_stretch2_simulation_bringup package</description>

  <maintainer email="millan-normans@cardiff.ac.uk">smn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <!-- Test Stretch 2 -->
  <depend>test_stretch2_common_bringup</depend>
  <depend>test_stretch2_desktop_bringup</depend>
  <depend>stretch_gazebo</depend>

  <!-- simulation space -->
  <depend>cucr_worlds_hospital</depend>

</package>
