<?xml version="1.0"?>
<package format="2">
  <name>test_tiago_common_bringup</name>
  <version>0.0.0</version>
  <description>The test_tiago_common_bringup package</description>

  <maintainer email="silvas1@cardiff.ac.uk">Steven Alexander Silva Mendoza</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>four_wheel_steering_msgs</depend>
  <depend>urdf_geometry_parser</depend>
  <depend>tf_lookup</depend>

  <export>

  </export>
</package>
