<?xml version="1.0"?>
<package format="2">
  <name>test_tiago_desktop_bringup</name>
  <version>0.0.0</version>
  <description>The test_tiago_desktop_bringup package</description>

  <maintainer email="silvas1@cardiff.ac.uk">Steven Alexander Silva Mendoza</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
